2004-11-30  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/post.trm docs/Changes.doc: Typos.

2004-11-29  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/pm.trm src/os2/gclient.c: Changes for the new colorspec type
	TC_RGB. Currently, they are dummy in gclient.c -- to be implemented.

2004-11-27  Ethan Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc docs/gnuplot.texi: Re-format a large section of text
	dealing with binary files.  The previous layout caused PDF output to
	treat the whole section as quoted monospace text, as for a code example.

2004-11-27  Ethan Merritt  <merritt@u.washington.edu>

	* src/color.h: Add new colorspec type TC_RGB, allowing colors to
	be specified as an RGB triple stored as (RR<<16)+(GG<<8)+BB with
	red, green, and blue components running from 0 - 255.

	* src/gadgets.c (apply_pm3dcolor) src/gadgets.h: Pass RGB color
	specifications to terminals via the new API for term->set_color().

	* src/gplt_x11.c src/gplt_x11.h term/*.trm (set_color):
	Implement set color to specified RGB triple in these terminals
		aquaterm gd metapost pdf post svg x11
	Somebody please have a look at doing the same for
		cgm pstricks win

2004-11-26  Ethan Merritt  <merritt@u.washington.edu>

	* src/term_api.h term/README: Change from term->set_color(double gray)
	to term->set_color(struct t_colorspec *colorspec).  This sets the stage
	for allowing color specification mechanisms other than a PM3D palette.
	The immediate intent is to allow direct requests for RGB color values.
	
	* term/*.trm: Convert all terminal types providing set_color() to the
	new API. No change in terminal behavior or capabilities.
	Terminals affected:
		aquaterm cgm fig gd metapost pdf post pslatex svg 
		tgif vgagl win x11 pstricks

	* src/color.c (set_color): This is the only routine that calls 
	term->set_color. Convert it to pass a colorspec pointer rather than a
	palette gray value.

2004-11-25  Ethan Merritt  <merritt@u.washington.edu>
