@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: plot2d.c,v 1.87 2004/11/12 07:14:52 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: plot2d.c,v 1.88 2004/11/22 00:43:05 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - plot2d.c */
@@ -1626,7 +1626,7 @@ eval_plots()
 
 #ifdef BACKWARDS_COMPATIBLE
 		/* allow old-style syntax - ignore case lt 3 4 for example */
-		if (isanumber(c_token)) {
+		if (!END_OF_COMMAND && isanumber(c_token)) {
 		    struct value t;
 		    this_plot->lp_properties.l_type =
 			this_plot->lp_properties.p_type =
